--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-*{
+html, body{
     margin: 0;
     padding: 0;
     height: 100%;
+    font-family: sans-serif;
+    /* color: antiquewhite; */
 }
 /* body, html{
     height: 100%;
@@ -15,9 +17,28 @@ h1{
 .main-container{
     display: grid;
     grid-template-rows: 1fr 5fr;
+    height: 100%;
 }
 .main-container .header{
+    padding: 20px 50px;
     background: lightcyan;
+    display: flex;
+}
+
+.header #addBook{
+    cursor: pointer;
+    font-size: 20px;
+    background: lightblue;
+    border-radius: 30px;
+    border: 0;
+    color: aliceblue;
+    
+}
+
+.header button[type="submit"]{
+    border-radius: 8px;
+    border: 0;
+    font-size: 15px;
 }
 .main-container .main-content{
     background: lightseagreen;
@@ -27,13 +48,16 @@ h1{
     padding: 20px 50px;
     height: fit-content;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 15px;
 }
 .main-content .book-container > div{
     border-radius: 8px;
     background-color: lightblue;
     border: 4px solid royalblue;
-    height: 100px;
-    padding: 8px;
+    height: 300px;
+    width: 200px;
+    /* padding: 8px; */
+    display: flex;
+    justify-content: center;
 }
