--- a/style.css
+++ b/style.css
@@ -5,9 +5,6 @@ html, body{
     font-family: sans-serif;
     /* color: antiquewhite; */
 }
-/* body, html{
-    height: 100%;
-} */
 
 h1{
     text-align: center;
@@ -55,9 +52,22 @@ h1{
     border-radius: 8px;
     background-color: lightblue;
     border: 4px solid royalblue;
-    height: 300px;
-    width: 200px;
-    /* padding: 8px; */
-    display: flex;
-    justify-content: center;
+    padding: 8px;
+    display:grid;
+    grid-auto-rows: auto;
+}
+
+.main-content .book-container > div > div{
+    grid-column: span 2;
+    font-size: 12px;
+}
+
+
+.main-content .book-container > div > button{
+    cursor: pointer;
+    border-radius: 8px;
+    border: 0;
+    font-size: 12px;
+    margin: 5px;
+    padding: 10px 3px;
 }
